syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.iohk.atala.prism.protos";

package io.iohk.atala.prism.protos;

service EncryptedDataVaultService {
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
    rpc AuthHealthCheck(AuthHealthCheckRequest) returns (AuthHealthCheckResponse) {}
}

message HealthCheckRequest {}
message HealthCheckResponse {}

message AuthHealthCheckRequest {}
message AuthHealthCheckResponse {}
